--- a/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
+++ b/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
@@ -18,9 +18,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.5.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.1.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.30.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.5.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.2.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.32.0" />
   </ItemGroup>
 
   <!--<ItemGroup Condition="'$(TargetFramework)'=='net472'">
@@ -35,7 +35,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</PackageId>
-      <Version>1.2.0</Version>
+      <Version>1.2.1</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -45,6 +45,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        1.2.1 Bump
         1.2.0 Upgraded IdentityModel
         1.1.6 Bump
         1.1.0 Dropped support for net461, now has net472 as minimum
