--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -21,13 +21,13 @@
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="6.1.1" />
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.30.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="6.2.1" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.32.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
 		<PackageId>Nexus.Link.IdentityAccessManagement.Sdk</PackageId>
-		<Version>0.6.0</Version>
+		<Version>0.6.1</Version>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>nexus;link</PackageTags>
 		<Authors>XLENT Link</Authors>
@@ -37,7 +37,8 @@
 		<Copyright>Copyright ©2021 Xlent Link AB</Copyright>
 		<IncludeSymbols>true</IncludeSymbols>
 		<PackageReleaseNotes>
-			0.6.0 Upgraded IdentityModel
+			0.6.1 Bump
+      0.6.0 Upgraded IdentityModel
       0.5.0 Downgraded IdentityModel
       0.4.26 Bump
       0.4.19 Updated nugets to avoid versions with security risks
