--- a/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Abstract</PackageId>
-    <Version>1.7.3</Version>
+    <Version>1.8.0</Version>
     <Description>Workflow engine contracts</Description>
     <Copyright>Copyright ©2023 Xlent Link AB</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -43,6 +43,7 @@
     <PackageLanguage>en-US</PackageLanguage>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.8.0 Added WorkflowOptions.JsonSupport to support a backwards compatible way to move to System.Text.Json
       1.7.3 Removed redundant test in validation for WorkflowSummary.
       1.7.2 Added "AndReturn" to create and update methods for efficiency when using the CrudPersistingenceHelper cache
       1.7.1 Now has JsonIgnore attribute on redundant information in WorkflowSummary
