--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -57,7 +57,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.36.0</Version>
+    <Version>6.36.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -67,6 +67,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.36.1 Added getter and setter methods in JobResults for better compatibility with System.Text.Json
       6.36.0 Added WorkflowOptions.JsonSupport to support a backwards compatible way to move to System.Text.Json
       6.35.7 If we wail to get responses for all the activity requests we will now try to get the individual activity request
       6.35.6 Semaphore first for lock, then for throttle
