--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -57,7 +57,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.37.0</Version>
+    <Version>6.37.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -67,6 +67,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.37.1 Bug where we threw an exception where we should have just returned it
       6.37.0 Added .SetFireAndForget() for actions
       6.36.1 Added getter and setter methods in JobResults for better compatibility with System.Text.Json
       6.36.0 Added WorkflowOptions.JsonSupport to support a backwards compatible way to move to System.Text.Json
