--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -57,7 +57,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.37.2</Version>
+    <Version>6.37.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -67,6 +67,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.37.3 Bug where we classified workflows as Halting when they should be Halted and by mistake prioritized Halt/Halted before workflow cancelled. Bug where UrgencyLevel was mixed up
       6.37.2 Better in parameter names
       6.37.1 Bug where we threw an exception where we should have just returned it
       6.37.0 Added .SetFireAndForget() for actions
