--- a/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Abstract/WorkflowEngine.Sdk.Abstract.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Abstract</PackageId>
-    <Version>1.9.1</Version>
+    <Version>1.10.0</Version>
     <Description>Workflow engine contracts</Description>
     <Copyright>Copyright ©2023 Xlent Link AB</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -43,6 +43,7 @@
     <PackageLanguage>en-US</PackageLanguage>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.10.0 Introduced Spawn/Await for all activities
       1.9.1 Better in parameter names
       1.9.0 Added .SetFireAndForget() for actions
       1.8.0 Added WorkflowOptions.JsonSupport to support a backwards compatible way to move to System.Text.Json
