--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -27,9 +27,9 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.32.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.13" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.14" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.19.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.2.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.3.0" />
     <PackageReference Include="Serilog" Version="4.1.0" />
   </ItemGroup>
 
@@ -57,7 +57,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.38.0</Version>
+    <Version>6.38.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -67,6 +67,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.38.2 Bump
       6.38.1 Introduced Spawn/Await for all activities
       6.37.4 When retrying an entire workflow, the context data for each failed activity was not reset
       6.37.3 Bug where we classified workflows as Halting when they should be Halted and by mistake prioritized Halt/Halted before workflow cancelled. Bug where UrgencyLevel was mixed up
