--- a/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>Nexus.Link.WorkflowEngine.Sdk.Persistence.Abstract.UnitTests</AssemblyName>
     <RootNamespace>Nexus.Link.WorkflowEngine.Sdk.Persistence.Abstract.UnitTests</RootNamespace>
   </PropertyGroup>
@@ -9,7 +9,7 @@
   <!-- Nugets for the test framework -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
+    <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
   </ItemGroup>
 
